*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.12 ===
* Updated build scripts.

=== 1.0.11 ===
* Reduced dependency on the lsp-common-lib.
* Updated build scripts.

=== 1.0.10 ===
* Updated build scripts.

=== 1.0.9 ===
* Updated build scripts.
* Updated FloatBuffer.

=== 1.0.8 ===
* Updated build system.

=== 1.0.7 ===
* Added FloatBuffer::fill method.
* Updated build system.

=== 1.0.6 ===
* Updated build scripts that now use tags without prefixes first.
* Updated headers and license files to match LGPL3+ license.
* Updated make files to produce static library, pkgconf file and source tree.

=== 1.0.5 ===
* Compatibility fixes with older GCC/GLIBC.

=== 1.0.4 ===
* Updated build files.
* Fixed small memory leak caused by TestExecutor class.

=== 1.0.3 ===
* Updated build scripts.
* Updated versioning subsystem.

=== 1.0.2 ===
* Added better support for temporary directory
* Added better support for resource directory
* Improved MTEST and UTEST macros

=== 1.0.1 ===
* Improved build system
* Added before() and after() test handlers for initializer

=== 1.0.0 ===
* Unit tests
* Performance tests
* Manual tests
