@@ -3,6 +3,8 @@
 *******************************************************************************
 
 === 1.0.12 ===
+* Removed lsp-common-lib from dependencies (breaking circular dependencies).
+* Source code is compatible with C++ 11 standard and above.
 * Updated build scripts.
 
 === 1.0.11 ===
